Have basic positioning of section 1
Everything is where is supposed to be; I just don't understand
why the text in the header is not stretching all the way to the right.

--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,31 @@
 body {
     display: flex;
+
 }
 
 .first {
     display: flex;
     flex-direction: column;
+}
+
+ul {
+    display: flex;
+    list-style: none;
+    margin: 0;
+    margin-left: auto;
+    padding: 0;
+}
+
+.header {
+    display: flex;
+}
+
+h1 {
+    padding: none;
+    margin: none;
+    display: inline;
+}
+
+.first-content {
+    display: flex;
 }
