--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,11 @@
 body {
     display: flex;
+    flex-direction: 1;
 
 }
 
 .first {
+    flex: 1;
     display: flex;
     flex-direction: column;
 }
