Structure the content of section one

--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,12 @@
 body {
     display: flex;
-    flex-direction: 1;
-
 }
 
 .first {
     flex: 1;
     display: flex;
     flex-direction: column;
+    padding: 10px 150px;
 }
 
 ul {
@@ -29,5 +28,11 @@ h1 {
 }
 
 .first-content {
+    justify-content: space-between;
     display: flex;
+    align-items: center;
+}
+
+.first-left-content {
+    width: 350px;
 }
