--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,18 @@
 body {
     display: flex;
+    flex-direction: column;
+    margin: 0;
 }
 
 .first {
+    padding: 10px 150px;
+    background-color: #1f2937;
+}
+
+.first, .second {
     flex: 1;
     display: flex;
     flex-direction: column;
-    padding: 10px 150px;
-    background-color: #1f2937;
 }
 
 ul {
