Add basic layout to section 2.
Haven't really mess with colors or aesthetic things, but the layout
is sort of done. I just have to add the squares on top of each text.

--- a/css/style.css
+++ b/css/style.css
@@ -69,3 +69,22 @@ button {
     padding: 7px 25px;
     border-radius: 5px;
 }
+
+.second {
+    align-items: center;
+}
+
+.second-content {
+    display: flex;
+    gap: 30px;
+}
+
+.ilustration-combo {
+    width: 150px;
+}
+
+h2 {
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1f2937;
+}
