--- a/css/style.css
+++ b/css/style.css
@@ -110,3 +110,22 @@ button {
    font-size: 18px;
    margin-top: 8px;
 }
+
+.third {
+    background-color: #e5e7eb;
+    padding: 160px;
+}
+
+.third p {
+    font-size: 36px;
+    font-style: italic;
+    font-family: sans-serif;
+    font-weight: lighter;
+    color: #1f2937;
+}
+
+.third span {
+    font-size: 24;
+    font-family: sans-serif;
+    font-weight: bolder;
+}
