--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@ h1 {
 }
 
 .first-content span{
-    padding: 100px;
+    padding: 110px 100px;
     background-color: gray;
 }
 
@@ -111,21 +111,32 @@ button {
    margin-top: 8px;
 }
 
-.third {
-    background-color: #e5e7eb;
-    padding: 160px;
+.third-content {
+    width: 830px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
 }
 
-.third p {
+.third {
+    background-color: #e5e7eb;
+    padding: 100px 160px;
+    display: flex;
+    justify-content: center;
+}
+
+.third-content p {
     font-size: 36px;
     font-style: italic;
     font-family: sans-serif;
     font-weight: lighter;
     color: #1f2937;
+    margin-bottom: 0;
 }
 
-.third span {
-    font-size: 24;
+.third-content span {
+    width: 300px;
+    font-size: 26px;
     font-family: sans-serif;
     font-weight: bolder;
 }
