--- a/css/style.css
+++ b/css/style.css
@@ -140,3 +140,13 @@ button {
     font-family: sans-serif;
     font-weight: bolder;
 }
+
+.fourth {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.fourth-content {
+    
+}
