--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ h1 {
     padding: 100px 0;
 }
 
-.first-content, ul, button {
+.first-content, ul, button, .footer {
     color: #e5e7eb;
     font-size: 18px;
 }
@@ -179,4 +179,17 @@ button, .fourth-content {
     font-size: 14px;
     font-weight: lighter;
     font-family: sans-serif;
+}
+
+.footer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #1f2937;
+    padding: 30px;
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
 }
