--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,7 @@ h1 {
     display: flex;
     align-items: center;
     padding: 100px 0;
+
 }
 
 .first-content, ul, button, .footer {
@@ -81,6 +82,8 @@ button {
 .second-content {
     display: flex;
     gap: 50px;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 .ilustration-combo {
@@ -153,8 +156,9 @@ button, .fourth-content {
    border-radius: 10px;
    display: flex;
    padding: 50px 20px;
-   justify-content: center;
-   gap: 150px;
+   justify-content: space-around;
+    gap: 20px;
+   flex-wrap: wrap;
 }
 
 .fourth-right-content {
@@ -163,6 +167,7 @@ button, .fourth-content {
 
 .fourth button {
     border: 2px white solid;
+    flex-shrink: 0;
     border-radius: 10px;
     padding: 5px 30px;
     height: fit-content;
